--- a/sai/page/css/sai.css
+++ b/sai/page/css/sai.css
@@ -8,32 +8,20 @@
     width: 170px;
 }
 
+.sai_wrapper {
+    margin-top: 50px;
+}
 
 #sai_navbar{
     height:40px;
 }
 
 #project_navbar{
-    width:224px;
-    position: fixed;
+/*    width:224px;*/
+/*    position: fixed;*/
     left: 0px;
     bottom: 0px;
     top: 38px;
-}
-
-#content-wrapper{
-    overflow: auto;
-    position: absolute;
-    top: 40px;
-    bottom: 0px;
-    left: 224px;
-    right: 0px;
-    padding: 15px;
-    min-width:1000px;
-}
-
-#content{
-    width:100%
 }
 
 #footer{
