--- a/sai/modules/saistart_sys_sai/css/saistart_sys_sai.css
+++ b/sai/modules/saistart_sys_sai/css/saistart_sys_sai.css
@@ -2,6 +2,11 @@
 /*    width: 1250px;*/
 }
 
+#sai_datetime {
+    font-weight: bold;
+    text-align: right;
+}
+
 #container_top .well{
 /*    height: 220px;*/
 /*    min-width: 250px;*/
